Changed about me page, some styles and added different background photo.#1

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Gerard Degas</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,9 +35,6 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
@@ -51,8 +48,8 @@
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
-          <h2>Welcome</h2>
-          <h3>I'm Gerard Degas</h3>
+          <h3>Welcome! I'm Gerard Degas</h3>
+          <!-- <h3>I'm Gerard Degas</h3> -->
           <hr class="intro-divider">
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
@@ -86,10 +83,10 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-            <p class="lead">A special thanks to
-              <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>
-              for providing the photographs that you see in this template. Visit their website to become a member.</p>
+            <h2 class="section-heading">Project 1</h2>
+            <p class="lead">My first project
+              <a target="_blank" href="https://github.com/gdegas/Surfazon">Surfazon</a>
+              is an e-commerce website for surf enthusiasts. It was built to replicate an amazon like web application.</p>
           </div>
           <div class="col-lg-5 mr-auto">
             <img class="img-fluid" src="img/ipad.png" alt="">
@@ -190,7 +187,7 @@
       <div class="container">
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
@@ -198,14 +195,10 @@
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#services">Services</a>
-          </li>
-          <li class="footer-menu-divider list-inline-item">&sdot;</li>
-          <li class="list-inline-item">
             <a href="#contact">Contact</a>
           </li>
         </ul>
-        <p class="copyright text-muted small">Copyright &copy; Your Company 2017. All Rights Reserved</p>
+        <p class="copyright text-muted small">&copy; Gerard Degas 2017</p>
       </div>
     </footer>
 
