Added link hrefs. #3

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Connect to a PRO-grammer</h2>
             <p class="lead">
-              <a target="_blank" href="https://github.com/gdegas/Connect-to-a-PRO-grammer">Connect to a PRO-grammer</a> is a web application
-              for programmers to learn or teach programming based on language. A user can sign-up, choose whether they want
+              <a target="_blank" href="https://github.com/gdegas/Connect-to-a-PRO-grammer">Connect to a PRO-grammer</a> is a web application built
+              with the React framework for programmers to learn or teach programming based on language. A user can sign-up, choose whether they want
               to be a mentor or a mentee and then pick their programming languages of choice from a list. Once profile is created
               you can see profiles of mentors/mentees currently online and connect with them!</p>
           </div>
@@ -153,24 +153,24 @@
 
         <div class="row">
           <div class="col-lg-6 my-auto">
-            <h2>Connect to Start Bootstrap:</h2>
+            <h2>Let's Connect:</h2>
           </div>
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://twitter.com/gdegas" class="btn btn-secondary btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/gdegas" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://www.linkedin.com/in/gerard-degas-305264ab/" class="btn btn-secondary btn-lg">
                   <i class="fa fa-linkedin fa-fw"></i>
                   <span class="network-name">Linkedin</span>
                 </a>
