--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <script src="vendor/jquery/jquery.min.js"></script>
     <script src="vendor/popper/popper.min.js"></script>
     <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
-    <script src="node_modules/typed.js/lib/typed.js"></script>
+    <script src="vendor/typed-js/typed.js"></script>
     <script>
       var typed = new Typed('#typed', {
         stringsElement: '#typed-strings',
