Added heroku links to project rate-my-child.#7

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Rate-My-Child</h2>
-            <p class="lead">Take a look at <a target="_blank" href="https://github.com/gdegas/Rate-My-Child">Rate-My-Child</a>,
-              a mobile friendly webapp that allows teachers to rate a student or child's behavior for the day and send SMS
+            <p class="lead">Take a look at <a target="_blank" href="https://rate-my-child.herokuapp.com">Rate-My-Child</a>,
+              a mobile friendly webapp that allows teachers to rate a student/child's behavior daily whilst at the same time sending SMS
               notifications directly to the parent!
               </p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
-            <img class="img-fluid" src="img/rate-my-child.png" alt="">
+            <a href="https://rate-my-child.herokuapp.com"><img class="img-fluid" src="img/rate-my-child.png" alt=""></a>
           </div>
         </div>
 
