Changed wording and added links

--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
       <div class="container">
         <div class="intro-message">
           <div id="typed-strings">
-            <p>Welcome!</p>
-            <p>I'm</p>
-            <p>Gerard Degas</p>
+            <p>Hi</p>
+            <p>I'm Gerard Degas</p>
+            <p>a Web Developer.</p>
+            <p>Check out my projects!</p>
           </div>
           <span id="typed"></span>
           <hr class="intro-divider">
@@ -109,7 +110,7 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Rate-My-Child</h2>
+            <h2 class="section-heading">Project: Rate-My-Child</h2>
             <p class="lead">Take a look at <a target="_blank" href="https://rate-my-child.herokuapp.com">Rate-My-Child</a>,
               a mobile friendly webapp that allows teachers to rate a student/child's behavior daily whilst at the same time sending SMS
               notifications directly to the parent!
@@ -134,7 +135,7 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Connect to a PRO-grammer</h2>
+            <h2 class="section-heading">Project: <br>Connect to a PRO-grammer</h2>
             <p class="lead">
               <a target="_blank" href="https://github.com/gdegas/Connect-to-a-PRO-grammer">Connect to a PRO-grammer</a> is a web application built
               with the React framework for programmers to learn or teach programming based on language. A user can sign-up, choose whether they want
@@ -218,8 +219,8 @@
     <script>
       var typed = new Typed('#typed', {
         stringsElement: '#typed-strings',
-        typeSpeed: 75,
-        startDelay: 1000,
+        typeSpeed: 55,
+        startDelay: 2500,
       });
     </script>
 
