Added heroku app links

--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
             <div class="clearfix"></div>
             <h2 class="section-heading">Project: Surfazon</h2>
             <p class="lead">My first project
-              <a target="_blank" href="https://github.com/gdegas/Surfazon">Surfazon</a>
+              <a target="_blank" href="https://surfazon.herokuapp.com/">Surfazon</a>
               is an e-commerce website for surf enthusiasts. It was built to replicate an amazon like web application.</p>
           </div>
           <div class="col-lg-5 mr-auto">
-            <img class="img-fluid" src="img/surfazon.png" alt="">
+            <a href="https://surfazon.herokuapp.com/"><img class="img-fluid" src="img/surfazon.png" alt="surfazon app image"></a>
           </div>
         </div>
 
