Edit background pic size, bio page, and removed projects from bootcamp

--- a/about.html
+++ b/about.html
@@ -17,28 +17,25 @@
       <section id="text">
         <h1>About me</h1>
         <p>
-          My name is Gerard Degas and I am a web developer.
+          I'm Gerard Degas and I am a web developer.
         </p>
         <p>
-          I grew up in a household with a French father and learned to speak French and think in other languages
-          at a very young age. Since then I developed a love for learning languages and have since also learned
-          to speak Spanish.
+          I grew up learning both French and English as my first languages in elementary school in Fountain Valley, CA. I started to think in other languages
+          at a very young age. Since then I developed a love for learning languages as well as teaching them and have always been good at picking them up.
         </p>
         <p>
-          After having received my Bachelor's of Arts in Political Science, I decided to become
-          a school teacher which I did in both France where I taught English and here at a private high school, where
-          I taught history and French. After a few years I began to realize teaching didn't provide the challenge
-          that I was looking for. I loved learning languages and was always very good with computers
-          and so I found coding, a perfect fit.
+          After having received my degree in poli-sci at UC Riverside, I decided to become
+          a school teacher. I taught English in Bordeaux, France for a little while and then moved back to the US to teach private high school languages, where
+          I taught social sciences and French, but something was missing. After a few years I started to feel something lacked in my career in teaching, I wasn't being challenged the way I wanted to be. I knew I loved learning languages and was always adept working with computers
+          and so I found coding.
         </p>
         <p>
-          I then enrolled in Orange County Code School where I learned how to program web
-          applications and graduated in August of 2017. I am now capable of developing full stack applications,
-          and have done so on many occasions as can be seen on my many personal projects.
+          I enrolled in Orange County Code School where I learned how to program web
+          applications and graduated in August of 2017. I now love my work as a full stack engineer at Uber, building awesome web applications every day.
         </p>
         <p>
-          I am currently looking for a full time position as a developer and am best reached through
-          E-mail at <a href="mailto:gdegas001@gmail.com">gdegas001@gmail.com</a>
+          I love continuing to grow and develop my network and can be best reach through
+          email <a href="mailto:gdegas001@gmail.com">gdegas001@gmail.com</a>. Also, check out my <a href="https://gerarddegas.netlify.com/">blog</a>!
         </p>
       </section>
         </div>
@@ -55,8 +52,13 @@
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
+            <a href="https://gerarddegas.netlify.com/">Blog</a>
+          </li>
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
             <a href="#contact">Contact</a>
           </li>
+
         </ul>
         <p class="copyright text-muted small">&copy; Gerard Degas 2017</p>
       </div>
