--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="https://gerarddegas.netlify.com/">Blog</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="mailto:gdegas001@gmail.com">Contact</a>
             </li>
           </ul>
@@ -80,118 +83,7 @@
       </div>
     </header>
 
-    <!-- Page Content -->
-    <section class="content-section-a">
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5 ml-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">Project: Surfazon</h2>
-            <p class="lead">My first project
-              <a target="_blank" href="https://surfazon.herokuapp.com/">Surfazon</a>
-              is an e-commerce website for surf enthusiasts. It was built to replicate an amazon like web application.</p>
-          </div>
-          <div class="col-lg-5 mr-auto">
-            <a href="https://surfazon.herokuapp.com/"><img class="img-fluid" src="img/surfazon.png" alt="surfazon app image"></a>
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-    </section>
-
-    <section class="content-section-b">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-5 mr-auto order-lg-2">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">Project: Rate-My-Child</h2>
-            <p class="lead">Take a look at <a target="_blank" href="https://rate-my-child.herokuapp.com">Rate-My-Child</a>,
-              a mobile friendly webapp that allows teachers to rate a student/child's behavior daily whilst at the same time sending SMS
-              notifications directly to the parent!
-              </p>
-          </div>
-          <div class="col-lg-5 ml-auto order-lg-1">
-            <a href="https://rate-my-child.herokuapp.com"><img class="img-fluid" src="img/rate-my-child.png" alt=""></a>
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-b -->
-
-    <section class="content-section-a">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-5 ml-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">Project: <br>Connect to a PRO-grammer</h2>
-            <p class="lead">
-              <a target="_blank" href="https://github.com/gdegas/Connect-to-a-PRO-grammer">Connect to a PRO-grammer</a> is a web application built
-              with the React framework for programmers to learn or teach programming based on language. A user can sign-up, choose whether they want
-              to be a mentor or a mentee and then pick their programming languages of choice from a list. Once profile is created
-              you can see profiles of mentors/mentees currently online and connect with them!</p>
-          </div>
-          <div class="col-lg-5 mr-auto ">
-            <img class="img-fluid" src="img/ConnectToAPro.png" alt="">
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-a -->
-
-    <aside class="banner">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6 my-auto">
-            <h2>Let's Connect:</h2>
-          </div>
-          <div class="col-lg-6 my-auto">
-            <ul class="list-inline banner-social-buttons">
-              <li class="list-inline-item">
-                <a href="https://twitter.com/gdegas" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-twitter fa-fw"></i>
-                  <span class="network-name">Twitter</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://github.com/gdegas" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-github fa-fw"></i>
-                  <span class="network-name">Github</span>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="https://www.linkedin.com/in/gerard-degas-305264ab/" class="btn btn-secondary btn-lg">
-                  <i class="fa fa-linkedin fa-fw"></i>
-                  <span class="network-name">Linkedin</span>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </aside>
-    <!-- /.banner -->
-
-    <!-- Footer -->
     <footer>
       <div class="container">
         <ul class="list-inline">
@@ -201,6 +93,10 @@
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
             <a href="about.html">About</a>
+          </li>
+          <li class="footer-menu-divider list-inline-item">&sdot;</li>
+          <li class="list-inline-item">
+            <a href="https://gerarddegas.netlify.com/">Blog</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
