--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@
             <li class="list-inline-item">
               <a href="https://twitter.com/gdegas" class="btn btn-secondary btn-lg">
                 <i class="fa fa-twitter fa-fw"></i>
-                <span class="network-name">Twitter</span>
+                <!-- <span class="network-name">Twitter</span> -->
               </a>
             </li>
             <li class="list-inline-item">
               <a href="https://github.com/gdegas" class="btn btn-secondary btn-lg">
                 <i class="fa fa-github fa-fw"></i>
-                <span class="network-name">Github</span>
+                <!-- <span class="network-name">Github</span> -->
               </a>
             </li>
             <li class="list-inline-item">
               <a href="https://www.linkedin.com/in/gerard-degas-305264ab/" class="btn btn-secondary btn-lg">
                 <i class="fa fa-linkedin fa-fw"></i>
-                <span class="network-name">Linkedin</span>
+                <!-- <span class="network-name">Linkedin</span> -->
               </a>
             </li>
           </ul>
