--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p>Hi</p>
             <p>I'm Gerard Degas</p>
             <p>a Web Developer.</p>
-            <p>Let's connect!</p>
+            <p>let's connect!</p>
           </div>
           <span id="typed"></span>
           <hr class="intro-divider">
