--- a/index.html
+++ b/index.html
@@ -1,43 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148352392-1"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-148352392-1"
+    ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() {
+        dataLayer.push(arguments);
+      }
       gtag('js', new Date());
 
       gtag('config', 'UA-148352392-1');
     </script>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <title>Gerard Degas</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link
+      href="vendor/font-awesome/css/font-awesome.min.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
 
     <!-- Custom styles for this template -->
-    <link href="css/landing-page.css" rel="stylesheet">
-
+    <link href="css/landing-page.css" rel="stylesheet" />
   </head>
 
   <body>
-
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">Gerard Degas</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -46,7 +67,9 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://gerarddegas.netlify.com/">Blog</a>
+              <a class="nav-link" href="https://gerarddegas.netlify.app/"
+                >Blog</a
+              >
             </li>
             <li class="nav-item">
               <a class="nav-link" href="mailto:gdegas001@gmail.com">Contact</a>
@@ -67,22 +90,31 @@
             <p>let's connect!</p>
           </div>
           <span id="typed"></span>
-          <hr class="intro-divider">
+          <hr class="intro-divider" />
           <ul class="list-inline intro-social-buttons">
             <li class="list-inline-item">
-              <a href="https://twitter.com/gdegas" class="btn btn-secondary btn-lg">
+              <a
+                href="https://twitter.com/gdegas"
+                class="btn btn-secondary btn-lg"
+              >
                 <i class="fa fa-twitter fa-fw"></i>
                 <!-- <span class="network-name">Twitter</span> -->
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://github.com/gdegas" class="btn btn-secondary btn-lg">
+              <a
+                href="https://github.com/gdegas"
+                class="btn btn-secondary btn-lg"
+              >
                 <i class="fa fa-github fa-fw"></i>
                 <!-- <span class="network-name">Github</span> -->
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="https://www.linkedin.com/in/gerard-degas-305264ab/" class="btn btn-secondary btn-lg">
+              <a
+                href="https://www.linkedin.com/in/gerard-degas-305264ab/"
+                class="btn btn-secondary btn-lg"
+              >
                 <i class="fa fa-linkedin fa-fw"></i>
                 <!-- <span class="network-name">Linkedin</span> -->
               </a>
@@ -91,7 +123,6 @@
         </div>
       </div>
     </header>
-
 
     <footer>
       <div class="container">
@@ -128,7 +159,5 @@
         startDelay: 2500,
       });
     </script>
-
   </body>
-
 </html>
