--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         typeSpeed: 55,
         startDelay: 2500,
       });
+      console.log('Hit meeeee uppppp yoooooaaa');
     </script>
   </body>
 </html>
