update about me

--- a/about.html
+++ b/about.html
@@ -1,54 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-148352392-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-148352392-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-    gtag('config', 'UA-148352392-1');
-  </script>
+      gtag('config', 'UA-148352392-1');
+    </script>
 
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/aboutme.css" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About me</title>
-</head>
-<body>
-  <div>
-    <div class="wrapper">
-      <div class="photo-me">
-        <img id="photo-me" src="img/Mephoto.jpeg" alt="photo of me">
-      </div>
-      <section id="text">
-        <h1>About me</h1>
-        <p>
-          I'm Gerard Degas and I am a web developer.
-        </p>
-        <p>
-          I grew up learning both French and English as my first languages in elementary school in Fountain Valley, CA. I started to think in other languages
-          at a very young age. Since then I developed a love for learning languages as well as teaching them and have always been good at picking them up.
-        </p>
-        <p>
-          After having received my degree in poli-sci at UC Riverside, I decided to become
-          a school teacher. I taught English in Bordeaux, France for a little while and then moved back to the US to teach private high school languages, where
-          I taught social sciences and French, but something was missing. After a few years I started to feel something lacked in my career in teaching, I wasn't being challenged the way I wanted to be. I knew I loved learning languages and was always adept working with computers
-          and so I found coding.
-        </p>
-        <p>
-          I enrolled in Orange County Code School where I learned how to program web
-          applications and graduated in August of 2017. I now love my work as a full stack engineer at Uber, building awesome web applications every day.
-        </p>
-        <p>
-          I love continuing to grow and develop my network and can be best reach through
-          email <a href="mailto:gdegas001@gmail.com">gdegas001@gmail.com</a>. Also, check out my <a href="https://gerarddegas.netlify.com/">blog</a>!
-        </p>
-      </section>
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/aboutme.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>About me</title>
+  </head>
+  <body>
+    <div>
+      <div class="wrapper">
+        <div class="photo-me">
+          <img id="photo-me" src="img/Mephoto.jpeg" alt="photo of me" />
         </div>
+        <section id="text">
+          <h1>About me</h1>
+          <p>I'm Gerard Degas and I am a software engineer</p>
+          <p>
+            I grew up learning both French and English as my first languages in
+            elementary school in Southern California. I started to think in
+            other languages at a very young age. Since then I developed a love
+            for learning languages and have always been adept to picking them
+            up.
+          </p>
+          <p>
+            After having received my undergraduate degree, I decided to become a
+            school teacher. I taught English in Bordeaux, France for a year and
+            ultimately came back to the US to teach private high school
+            languages, where I taught social sciences and French. After a few
+            years I started to feel something lacked in my career as a teacher,
+            I lacked the challenges I was seeking. I knew I loved learning
+            languages and was always adept working with computers and so I found
+            software engineering.
+          </p>
+          <p>
+            I enrolled in a bootcamp in Orange County where I learned how to
+            program web applications and graduated in August of 2017. I love
+            what I do and have worked previously at Uber and Block building
+            exciting products and solving problems at scale.
+          </p>
+          <p>
+            I love continuing to grow and develop my network and can be best
+            reach through email
+            <a href="mailto:gdegas001@gmail.com">gdegas001@gmail.com</a>. Also,
+            check out my <a href="https://gerarddegas.netlify.app/">blog</a> if
+            you want, but it's mostly just random jibbersh :]
+          </p>
+        </section>
+      </div>
     </div>
     <footer>
       <div class="container">
@@ -68,10 +83,9 @@
           <li class="list-inline-item">
             <a href="#contact">Contact</a>
           </li>
-
         </ul>
         <p class="copyright text-muted small">&copy; Gerard Degas 2017</p>
       </div>
     </footer>
-</body>
+  </body>
 </html>
