update about me

--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
             software engineering.
           </p>
           <p>
-            I enrolled in a bootcamp in Orange County where I learned how to
-            program web applications and graduated in August of 2017. I love
-            what I do and have worked previously at Uber and Block building
+            I enrolled in a coding boot camp in Orange County where I learned
+            how to program web applications and graduated in August of 2017. I
+            love what I do and have worked previously at Uber and Block building
             exciting products and solving problems at scale.
           </p>
           <p>
