update about me

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <div>
       <div class="wrapper">
         <div class="photo-me">
-          <img id="photo-me" src="img/Mephoto.jpeg" alt="photo of me" />
+          <img id="photo-me" src="img/me.jpg" alt="photo of me" />
         </div>
         <section id="text">
           <h1>About me</h1>
